fix cols overflowing even with scroll

--- a/src/pages/task/kanban/styles.module.scss
+++ b/src/pages/task/kanban/styles.module.scss
@@ -16,6 +16,7 @@
   display: flex;
   flex-direction: column;
   flex: 1;
+
   & > div.cols > div {
     height: 100%;
   }
@@ -23,6 +24,11 @@
 
 .cols {
   gap: 0;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+
+
   & > div > div {
     padding-right: 1rem;
   }
